[package]
name = "tosa"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.0"  # Replace with the latest version if needed
log = "0.4"
env_logger = "0.10"
rust-htslib = "0.48"  # Replace with the appropriate version you're using
itertools = "0.10"
flate2 = "1.0"

[[bin]]
name = "tosa" # This is the binary name
path = "src/main.rs" # Path to your main entry point
